@@ -113,6 +113,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #28255: calendar.TextCalendar().prmonth() no longer prints a space
+  at the start of new line after printing a month's calendar.  Patch by
+  Xiang Zhang.
+
 - Issue #20491: The textwrap.TextWrapper class now honors non-breaking spaces.
   Based on patch by Kaarle Ritvanen.
 
